<resources>
    <string name="app_name">Android development</string>
    <string name="title_ui">UI</string>
    <string name="title_Basic">Basic</string>
    <string name="title_interface">interface</string>
    <string name="title_user_interface">User interface</string>
    <string name="title_ui_examples">UI examples</string>
    <string name="title_ui_more">UI more</string>
    <string name="title_code_more">Code more</string>
    <string name="title_setting">Setting</string>
    <string name="title_about">About</string>
    <string name="text_share">Share</string>
    <string name="title_rate_us">Rate us</string>
    <string name="title_other_apps">Other apps</string>
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="title_permissions">Permissions</string>
    <string name="codecanyon_url">https://codecanyon.net/item/</string>
    <string name="title_bluetooth">BLUETOOTH</string>
    <string name="permission_read_phone_state">READ_PHONE_STATE</string>
    <string name="permission_internet">INTERNET</string>
    <string name="permission_access_network_state">ACCESS_NETWORK_STATE</string>
    <string name="permission_wake_lock">WAKE_LOCK</string>
    <string name="permission_receive_boot_completed">RECEIVE_BOOT_COMPLETED</string>
    <string name="permission_vibrate">VIBRATE</string>
    <string name="permission_access_coarse_location">ACCESS_COARSE_LOCATION</string>
    <string name="permission_access_fine_location">ACCESS_FINE_LOCATION</string>
    <string name="permission_install_shortcut">INSTALL_SHORTCUT</string>
    <string name="permission_read_history_bookmarks">READ_HISTORY_BOOKMARKS</string>
    <string name="permission_write_history_bookmarks">WRITE_HISTORY_BOOKMARKS</string>
    <string name="permission_access_wifi_state">ACCESS_WIFI_STATE</string>
    <string name="permission_change_wifi_state">CHANGE_WIFI_STATE</string>
    <string name="permission_access_gps">ACCESS_GPS</string>
    <string name="permission_access_assisted_gps">ACCESS_ASSISTED_GPS</string>
    <string name="permission_access_location">ACCESS_LOCATION</string>
    <string name="permission_write_external_storage">WRITE_EXTERNAL_STORAGE</string>
    <string name="permission_read_external_storage">READ_EXTERNAL_STORAGE</string>
    <string name="permission_set_wallpaper">SET_WALLPAPER</string>
    <string name="permission_nfc">NFC</string>
    <string name="permission_camera">CAMERA</string>
    <string name="permission_send_sms">SEND_SMS</string>
    <string name="permission_read_sms">READ_SMS</string>
    <string name="permission_read_calendar">READ_CALENDAR</string>
    <string name="permission_write_calendar">WRITE_CALENDAR</string>
    <string name="permission_read_contacts">READ_CONTACTS</string>
    <string name="permission_write_contacts">WRITE_CONTACTS</string>
    <string name="permission_get_accounts">GET_ACCOUNTS</string>
    <string name="permission_record_audio">RECORD_AUDIO</string>
    <string name="permission_read_phone_numbers">READ_PHONE_NUMBERS</string>
    <string name="permission_call_phone">CALL_PHONE</string>
    <string name="permission_answer_phone_calls">ANSWER_PHONE_CALLS</string>
    <string name="permission_read_call_log">READ_CALL_LOG</string>
    <string name="permission_write_call_log">WRITE_CALL_LOG</string>
    <string name="permission_add_voicemail">ADD_VOICEMAIL</string>
    <string name="permission_use_sip">USE_SIP</string>
    <string name="permission_process_outgoing_calls">PROCESS_OUTGOING_CALLS</string>
    <string name="permission_body_sensors">BODY_SENSORS</string>
    <string name="permission_receive_wap_push">RECEIVE_WAP_PUSH</string>
    <string name="permission_receive_mms">RECEIVE_MMS</string>
    <string name="title_dangerous_permissions">Dangerous permissions</string>
    <string name="title_normal_permissions">Normal permissions</string>
    <string name="info_normal_permissions">Normal permissions cover areas where your app needs to access data or resources outside the app\'s sandbox, but where there\'s very little risk to the user\'s privacy or the operation of other apps. For example, permission to set the time zone is a normal permission.  If an app declares in its manifest that it needs a normal permission, the system automatically grants the app that permission at install time. The system doesn\'t prompt the user to grant normal permissions, and users cannot revoke these permissions</string>
    <string name="info_dangerous_permissions">Dangerous permissions cover areas where the app wants data or resources that involve the user\'s private information, or could potentially affect the user\'s stored data or the operation of other apps. For example, the ability to read the user\'s contacts is a dangerous permission. If an app declares that it needs a dangerous permission, the user has to explicitly grant the permission to the app. Until the user approves the permission, your app cannot provide functionality that depends on that permission.  To use a dangerous permission, your app must prompt the user to grant permission at runtime</string>
    <string name="title_info">Info</string>
    <string name="info_permissions">The purpose of a permission is to protect the privacy of an Android user. Android apps must request permission to access sensitive user data (such as contacts and SMS), as well as certain system features (such as camera and internet). Depending on the feature, the system might grant the permission automatically or might prompt the user to approve the request.  A central design point of the Android security architecture is that no app, by default, has permission to perform any operations that would adversely impact other apps, the operating system, or the user. This includes reading or writing the user\'s private data (such as contacts or emails), reading or writing another app\'s files, performing network access, keeping the device awake, and so on.  This page provides an overview to how Android permissions work, including: how permissions are presented to the user, the difference between install-time and runtime permission requests, how permissions are enforced, and the types of permissions and their groups</string>
    <string name="info_normal_permissions_how_add">1. Add to manifest\n2. Allowed automatically\n3. Enjoy it</string>
    <string name="title_broadcast_receiver">Broadcast receiver</string>
    <string name="info_broadcast_receiver">A broadcast receiver (receiver) is an Android component which allows you to register for system or application events. All registered receivers for an event are notified by the Android runtime once this event happens.  For example, applications can register for the ACTION_BOOT_COMPLETED system event which is fired once the Android system has completed the boot process</string>
    <string name="title_list_of_broadcast_receivers">List of broadcast receivers</string>
    <string name="info_broadcast_receiver_how_add">1. Add to AndroidManifest.xml file.\n2. The implementing class for a receiver extends the BroadcastReceiver class.\n3. If the event for which the broadcast receiver has registered happens, the onReceive() method of the receiver is called by the Android system.</string>
    <string name="title_screen_state">Screen state</string>
    <string name="title_broadcast_text">Broadcast text</string>
    <string name="title_your_message">your message</string>
    <string name="title_send">Send</string>
    <string name="title_broadcast_message">Broadcast message</string>
    <string name="title_message">Message</string>
    <string name="title_empty">Empty</string>
    <string name="title_call_receiver">Call receiver</string>
    <string name="text_call_receiver">Call receiver</string>
    <string name="text_sms_receiver">SMS receiver</string>
    <string name="text_last_sms_receive_date">Date of last received message</string>
    <string name="text_basic_service">Basic service</string>
    <string name="text_photo">Photo</string>
    <string name="text_file">File</string>
    <string name="t_video">Video</string>
    <string name="text_audio">Audio</string>
    <string name="text_simple_notification">Simple notification</string>
    <string name="text_notification_with_open_url">Notification with open url</string>
    <string name="text_notification_with_play_sound">Notification with play sound</string>
    <string name="text_notification_with_open_app">Notification with open app</string>
    <string name="text_expandable_notification">Expandable notification</string>
    <string name="text_media_style">Media style</string>
    <string name="text_messaging_style">Messaging style</string>
    <string name="text_inbox_style">Inbox style</string>
    <string name="text_big_picture_style">Big picture style</string>
    <string name="text_bit_text_style">Big text style</string>
    <string name="text_reply_notification">Reply notification</string>
    <string name="text_action_button">Action button</string>
    <string name="text_downloadProgress">Download progress</string>
    <string name="text_simple">Simple</string>
    <string name="t_horizontal">Horizontal</string>
    <string name="menu_promotions">Promotions</string>
    <string name="menu_social">Social</string>
    <string name="menu_primary">Primary</string>
    <string name="menu_all_inboxes">All inboxes</string>
    <string name="title_all_labels">ALL LABELS</string>
    <string name="title_google_apps">GOOGLE APPS</string>
    <string name="menu_calendar">Calendar</string>
    <string name="menu_contacts">Contacts</string>
    <string name="menu_help_feedback"><![CDATA[Help & feedback]]></string>
    <string name="menu_starred">Starred</string>
    <string name="menu_important">Important</string>
    <string name="menu_sent">Sent</string>
    <string name="menu_scheduled">Schuduled</string>
    <string name="menu_outbox">Outbox</string>
    <string name="menu_drafts">Drafts</string>
    <string name="menu_all_mail">All mail</string>
    <string name="menu_spam">Spam</string>
    <string name="menu_trash">Trash</string>
    <string name="menu_requests">Requests</string>
    <string name="menu_reviews">Reviews</string>
    <string name="menu_payments">Payments</string>
    <string name="menu_last_actions">Last actions</string>
    <string name="menu_dashboards">Dashboards</string>
    <string name="menu_products">Products</string>
    <string name="title_other">Other</string>
    <string name="menu_setting">Setting</string>
    <string name="menu_security">Security</string>
    <string name="menu_profile">Profile</string>
    <string name="text_full_screen">Full screen</string>
    <string name="text_floating">Floating</string>
    <string name="text_image_chooser">Image chooser</string>
    <string name="text_list">Simple List</string>
    <string name="t_scrollable">Scrollable</string>
    <string name="t_badges">Badges</string>
    <string name="t_text_icon"><![CDATA[Text & Icon]]></string>
    <string name="t_custom_tab">Custom tab</string>
    <string name="t_only_icon">Only icon</string>
    <string name="text_hide_toolbar">Hide toolbar</string>
    <string name="t_vertical">Vertical</string>
    <string name="t_item_1">Item 1</string>
    <string name="t_item_2">Item 2</string>
    <string name="t_item_3">Item 3</string>
    <string name="projects">Projects</string>
</resources>