<?xml version="1.0" encoding="utf-8"?>
<menu
    xmlns:android="http://schemas.android.com/apk/res/android">

    <item
        android:title="@string/title_Basic"
        android:id="@+id/menu_main_basic"
        android:icon="@drawable/ic_android_24dp"/>

    <item
        android:title="@string/title_interface"
        android:id="@+id/menu_main_ui"
        android:icon="@drawable/ic_view_compact_black_24dp"/>

    <item
        android:title="@string/title_ui_more"
        android:id="@+id/menu_main_ui_more"
        android:icon="@drawable/ic_more_horiz_black_24dp"/>

    <item
        android:title="@string/title_code_more"
        android:id="@+id/menu_main_code_more"
        android:icon="@drawable/ic_code_black_24dp"/>

    <item
        android:title="@string/projects"
        android:id="@+id/menu_main_projects"
        android:icon="@drawable/rhombus_split"/>

</menu>