<?xml version="1.0" encoding="utf-8"?>
<LinearLayout
    android:orientation="vertical"
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:layout_marginStart="8dp"
    android:layout_marginEnd="8dp"
    android:layout_marginTop="8dp"
    tools:context=".Activity.UserInterface.LinearLayoutActivity">


    <com.google.android.material.textview.MaterialTextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/t_vertical"
        style="@style/TextAppearance.AppCompat.Title" />

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical">

        <androidx.appcompat.widget.AppCompatButton
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/t_item_1"
            android:layout_marginTop="8dp"/>

        <androidx.appcompat.widget.AppCompatButton
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/t_item_2"
            android:layout_marginTop="8dp"/>

        <androidx.appcompat.widget.AppCompatButton
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/t_item_3"
            android:layout_marginTop="8dp"/>

    </LinearLayout>

    <com.google.android.material.textview.MaterialTextView
        android:layout_marginTop="8dp"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/t_horizontal"
        style="@style/TextAppearance.AppCompat.Title" />

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        android:layout_marginTop="8dp">

        <androidx.appcompat.widget.AppCompatButton
            android:layout_width="0dp"
            android:layout_weight="1"
            android:layout_height="wrap_content"
            android:text="@string/t_item_1"/>

        <androidx.appcompat.widget.AppCompatButton
            android:layout_marginStart="8dp"
            android:layout_width="0dp"
            android:layout_weight="1"
            android:layout_height="wrap_content"
            android:text="@string/t_item_2"/>

        <androidx.appcompat.widget.AppCompatButton
            android:layout_width="0dp"
            android:layout_marginStart="8dp"
            android:layout_weight="1"
            android:layout_height="wrap_content"
            android:text="@string/t_item_3"/>

    </LinearLayout>

</LinearLayout>